Fix mobile headers so they don't overflow

--- a/src/Components/FullLook/FullLook.css
+++ b/src/Components/FullLook/FullLook.css
@@ -5,12 +5,16 @@
 	width: 100%;
 }
 
-.FullLook__heading img {
+.FullLook__heading-image {
+	align-items: center;
+	display: flex;
 	flex-grow: 0;
-	flex-shrink: 7;
-	height: auto;
+	flex-shrink: 6;
 	max-width: 180px;
-	min-width: 80px;
+	min-width: 15%;
+}
+
+.FullLook__heading img {
 	width: 100%;
 }
 
@@ -20,10 +24,10 @@
 	flex-shrink: 1;
 	font-size: 30px;
 	margin: 0 auto;
-	max-width: 500px;
 	padding: 30px 0;
 	text-align: center;
 	text-transform: uppercase;
+	max-width: 70%;
 }
 
 .FullLook__description {
@@ -33,4 +37,11 @@
 
 .FullLook__description-title {
 	font-weight: bold;
+}
+
+@media (min-width: 700px) {
+	.FullLook__heading-text {
+		max-width: 500px;
+		
+	}
 }
